feat: change vulnerable dependency